# ppl-service-rs

./: .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs
src/: main.rs  service_manager.rs  winapi.rs
src/service_manager/: elam.rs
src/winapi/: error.rs  error_msg.rs  handle_wrapper.rs
